--- a/scss/_hackathontitle.scss
+++ b/scss/_hackathontitle.scss
@@ -5,7 +5,7 @@
 
     .hackathon {
         font-family: 'minecrafterregular';
-        font-size: 10.5vw;
+        font-size: 9em;
         font-style: italic;
         line-height: 0.6;
         text-align: center;
@@ -16,7 +16,7 @@
         font-family: 'AGENCYB', sans-serif;
         font-style: normal;
         font-weight: 700;
-        font-size: 8vw;
+        font-size: 7em;
         letter-spacing: 10px;
         font-style: italic;
         text-align: center;
@@ -27,7 +27,7 @@
         font-family: 'AGENCYB', sans-serif;
         font-style: italic;
         font-weight: normal;
-        font-size: 5vw;
+        font-size: 5em;
         text-align: center;
         text-indent: 3rem;
         color: #f8f8f8;
